# hri_face_speaking_detector

./: README.md  package.xml  setup.cfg  setup.py
config/: 00-defaults.yml
hri_face_speaking_detector/: hri_face_speaking_detector.py
launch/: face_speaking_detector.launch.py
module/: hri_face_speaking_detector  hri_face_speaking_detector_module.yaml
